--- a/.github/actions/cached-deps/action.yml
+++ b/.github/actions/cached-deps/action.yml
@@ -5,6 +5,10 @@ inputs:
     description: 'Whether to cache the dependencies or not'
     required: false
     default: 'true' # This is the default value for the input
+outputs:
+  used-cache:
+    description: 'Whether the cache was used'
+    value: ${{ steps.install.outputs.cache == 'true' }}
 runs:
   using: 'composite' # Mention which type of actions we are creating
   steps:
@@ -16,6 +20,9 @@ runs:
         path: node_modules
         key: deps-node-modules-${{ hashFiles('**/package-lock.json') }}
     - name: Install dependencies
+      id: install
       if: steps.cache.outputs.cache-hit != 'true' || inputs.caching != 'true' # Here steps is a custom action context object
-      run: npm ci
+      run: |
+        npm ci
+        echo "::set-output name=cache::'${{ inputs.caching }}'"
       shell: bash # While creating the custom actions we have to mention that which shell we have to use for executing the steps
