--- a/.github/actions/deploy-s3-docker/action.yml
+++ b/.github/actions/deploy-s3-docker/action.yml
@@ -1,5 +1,5 @@
 name: 'Deploy to AWS S3'
-description: 'Deploy a static website via AWS S3'
+description: 'Deploy s static website via AWS S3'
 inputs:
   bucket:
     description: 'S3 bucket name'
@@ -15,5 +15,5 @@ outputs:
   website-url:
     description: 'The URL of the deployed website'
 runs:
-  using: 'node16' # This tells that this is the custom javascript action
-  main: 'main.js'
+  using: 'docker'
+  image: 'Dockerfile'
